fix not readable h1 title color.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,3 +7,9 @@
   padding-top: 5px;
   padding-bottom: 5px;
 }
+
+/* For the link string in H1.
+   The default link color is not too readable. */
+h1 > a:active, h1 > a:visited, h1 > a:link {
+  color: #000000;
+}
